# ns-amp

./: .gitignore  README.md
mpmhl/: CMakeLists.txt
mpmhl/include/: bench.cmdline  cmdline.h  graph.h  intermediary.h  receiver.h  sender.h  types.h  util.h  vector.h
mpmhl/src/: CMakeLists.txt  bench.c  cmdline.c  graph.c  intermediary.c  receiver.c  sender.c  util.c  vector.c  wrapper.c
routing/: CMakeLists.txt
routing/include/: types.h  util.h  vector.h
routing/src/: CMakeLists.txt  bench.c  util.c  vector.c
